testsuite/tests/interpreter_errors/selector_kind_error/test.out
main.adb

Error: Cannot use values of kind Bool in a selector

    | _ => true
           ^^^^

